--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 
     <div class="container">
       <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h1>
+<a id="hiten-anand-uk" class="anchor" href="#hiten-anand-uk" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hiten Anand <img class="emoji" title=":uk:" alt=":uk:" src="https://assets-cdn.github.com/images/icons/emoji/unicode/1f1ec-1f1e7.png" height="20" width="20" align="absmiddle">
+</h1>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 
